--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -14,10 +14,11 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
-
+<link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
   <title></title>
 </head>
-<body>
+<body class='container'>
+  <header><a href="/">Sickr...</a><span id='log_in'><a href="">Sign Up</a><a href="">Sign In</a></span></header>
   <%= yield %>
 </body>
 </html>
