--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,23 +1,9 @@
-<div class="container">
-  <h1>Welcome to Sinatra!</h1>
-  <p>Hello, world!</p>
-
-  <table>
-    <tr>
-      <th>File Description</th>
-      <th>File Location</th>
-    </tr>
-    <tr>
-      <td>This view file</td>
-      <td><code><%= __FILE__.gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The layout file</td>
-      <td><code><%= File.expand_path('../layout.erb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-    <tr>
-      <td>The current controller</td>
-      <td><code><%= File.expand_path('../../controllers/index.rb', __FILE__).gsub(Sinatra::Application.root, '') %></code></td>
-    </tr>
-  </table>
+<div class='photodisplay'>
+  <% @photos.each do |photo| %>
+    <div class='photo'>
+    <a href="<%=photo.url%>"><img src="<%=photo.small_url%>" alt=""></a><br>
+    <span class='details'><a href="/users/<%=photo.user.id%>"><%=photo.user.name%></a> <a href="/albums/<%=photo.album.id%>"><%=photo.album.name%></a></span>
+    </div>
+  <% end %>
 </div>
+
